--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "private": true,
   "dependencies": {
+    "@0x/types": "^3.3.7",
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.7",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "alchemy-sdk": "^2.2.1",
+    "angular-highcharts": "^14.1.7",
+    "bootstrap": "^5.2.0",
+    "highcharts": "^10.3.1",
+    "opensea-js": "^4.0.12",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,7 +34,10 @@
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.0",
+    "@angular/localize": "^14.2.0",
+    "@types/fbemitter": "^2.0.32",
     "@types/jasmine": "~4.0.0",
+    "@types/node-fetch": "^2.6.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
