--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/effects": "^14.0.0",
+    "@walletconnect/types": "^2.1.4",
+    "@walletconnect/web3-provider": "^1.8.0",
     "alchemy-sdk": "^2.2.1",
     "angular-highcharts": "^14.1.7",
     "bootstrap": "^5.2.0",
@@ -29,6 +32,8 @@
     "particles.js": "^2.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "web3": "^1.8.1",
+    "web3modal": "^1.9.10",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
