--- a/package.json
+++ b/package.json
@@ -21,20 +21,14 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "@ngrx/effects": "^14.0.0",
-    "@walletconnect/types": "^2.1.4",
-    "@walletconnect/web3-provider": "^1.8.0",
     "alchemy-sdk": "^2.2.1",
     "angular-highcharts": "^14.1.7",
     "bootstrap": "^5.2.0",
+    "ethers": "^5.7.2",
     "highcharts": "^10.3.1",
-    "opensea-js": "^4.0.12",
     "particles.js": "^2.0.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "web3": "^1.8.1",
-    "web3modal": "^1.9.10",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.9",
