--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngrx/store": "^15.1.0",
     "alchemy-sdk": "^2.2.1",
     "angular-highcharts": "^14.1.7",
     "bootstrap": "^5.2.0",
@@ -28,7 +29,9 @@
     "highcharts": "^10.3.1",
     "particles.js": "^2.0.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "web3": "^1.8.1",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.9",
